--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-REACT_APP_BACKEND_URL=http://localhost:8888
+REACT_APP_BACKEND_URL=http://charlotteandange.online:20248
 REACT_APP_HASURA_HTTPLINK=https://trusty-rooster-85.hasura.app/v1/graphql
 REACT_APP_HASURA_WSLINK=wss://trusty-rooster-85.hasura.app/v1/graphql
